# 251001_Financial_Analysis

./: .env.template  .gitignore  Iterative_RAG_반복_문제_해결_가이드.md  README.md  UV_가이드.md  database.py  graph.py  main.py  parser.py  pyproject.toml  requirements.txt  tools.py  범위조건_필터링_문제_해결_가이드.md  복합조건_쿼리_가이드.md  비교분석_문제_해결_가이드.md  사용_가이드.md  순이익_항목명_차이_가이드.md  숫자_단위_변환_문제_해결_가이드.md  실행_가이드.md  실행_가이드_UV.md  영업이익률_필터링_문제_해결_가이드.md  원인분석_웹검색_가이드.md  재무비율_계산_가이드.md  재무비율_자동계산_가이드.md  재무용어_매핑_가이드.md  회사명_매칭_가이드.md
data/balance_sheets/: 2025_반기보고서_01_재무상태표_금융기타_20251001.txt  2025_반기보고서_01_재무상태표_금융기타_연결_20251001.txt  2025_반기보고서_01_재무상태표_보험_20251001.txt  2025_반기보고서_01_재무상태표_보험_연결_20251001.txt  2025_반기보고서_01_재무상태표_은행_20251001.txt  2025_반기보고서_01_재무상태표_은행_연결_20251001.txt  2025_반기보고서_01_재무상태표_증권_20251001.txt  2025_반기보고서_01_재무상태표_증권_연결_20251001.txt
data/cash_flow_statements/: 2025_반기보고서_04_현금흐름표_금융기타_20251001.txt  2025_반기보고서_04_현금흐름표_금융기타_연결_20251001.txt  2025_반기보고서_04_현금흐름표_보험_20251001.txt  2025_반기보고서_04_현금흐름표_보험_연결_20251001.txt  2025_반기보고서_04_현금흐름표_은행_20251001.txt  2025_반기보고서_04_현금흐름표_은행_연결_20251001.txt  2025_반기보고서_04_현금흐름표_증권_20251001.txt  2025_반기보고서_04_현금흐름표_증권_연결_20251001.txt
data/equity_statements/: 2025_반기보고서_05_자본변동표_금융기타_20251001.txt  2025_반기보고서_05_자본변동표_금융기타_연결_20251001.txt  2025_반기보고서_05_자본변동표_보험_20251001.txt  2025_반기보고서_05_자본변동표_보험_연결_20251001.txt  2025_반기보고서_05_자본변동표_은행_20251001.txt  2025_반기보고서_05_자본변동표_은행_연결_20251001.txt  2025_반기보고서_05_자본변동표_증권_20251001.txt  2025_반기보고서_05_자본변동표_증권_연결_20251001.txt
ㄱ. 발표자료 및 캡처이미지/: 재무제표분석시스템.html
(+10 files in other folders)
