[project]
name = "financial-analysis-poc-v2"
version = "2.0.0"
description = "재무제표 분석 시스템 v2 - 벡터 기반 고유명사 검색 및 Adaptive RAG 지원"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "gradio>=5.47.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.8",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]

